--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <img src="./logo_475.png">
     <span style="display:block;width:475px;text-align:center;font-family:Georgia;font-size:18px;font-weight:bold;">Embark on a birding adventure!</span>
     <br>
-    <p style="display:block;width:475px;text-align:left;font-family:Georgia;font-size:18px;padding-left:18px;">Feather Trail is an action RPG about going around and looking at birds, set in the world of Nearctica, and featuring real-world plants and animals. The game is currently in development.</p>
-    <p style="display:block;width:475px;text-align:left;font-family:Georgia;font-size:18px;padding-left:18px;">I'm hoping to share out a playable demo for feedback sometime in 2023 and will be sharing insider updates here:</p>
+    <p style="display:block;width:475px;text-align:left;font-family:Georgia;font-size:18px;padding-left:18px;">Feather Trail is an action RPG about going around and looking at birds, featuring real-world plants and animals. The game is currently in development.</p>
+    <p style="display:block;width:475px;text-align:left;font-family:Georgia;font-size:18px;padding-left:18px;"><b>DEMO IS OUT!</b> You can play it on itch.io: https://synapsid-games.itch.io/feather-trail</p>
     <a href="https://forms.gle/FstYCWQzKDq8iWSs6" style="color:#d8ff6b;display:block;width:475px;text-align:center;font-family:Georgia;font-size:24px;">Friends of Feather Trail Mailing List</a>
-    <p style="display:block;width:475px;text-align:left;font-family:Georgia;font-size:18px;padding-left:18px;">In the meantime, please follow along step-by-step at the game's <a href="https://twitter.com/feathertrail" style="color:#d8ff6b;">Twitter</a> page as I tinker away.</p>
+    <p style="display:block;width:475px;text-align:left;font-family:Georgia;font-size:18px;padding-left:18px;">You can also follow along step-by-step at the game's <a href="https://twitter.com/feathertrail" style="color:#d8ff6b;">Twitter</a> page as I tinker away.</p>
     <img src="./bago.gif" style="display:block;padding-top:30px;padding-left:100px;">
   </div>
 </body>
