--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <span style="display:block;width:475px;text-align:center;font-family:Georgia;font-size:18px;font-weight:bold;">Embark on a birding adventure!</span>
     <br>
     <p style="display:block;width:475px;text-align:left;font-family:Georgia;font-size:18px;padding-left:18px;">Feather Trail is an action RPG about going around and looking at birds, featuring real-world plants and animals. The game is currently in development.</p>
-    <p style="display:block;width:475px;text-align:left;font-family:Georgia;font-size:18px;padding-left:18px;"><b>DEMO IS OUT!</b> You can play it on itch.io: https://synapsid-games.itch.io/feather-trail</p>
-    <a href="https://forms.gle/FstYCWQzKDq8iWSs6" style="color:#d8ff6b;display:block;width:475px;text-align:center;font-family:Georgia;font-size:24px;">Friends of Feather Trail Mailing List</a>
-    <p style="display:block;width:475px;text-align:left;font-family:Georgia;font-size:18px;padding-left:18px;">You can also follow along step-by-step at the game's <a href="https://twitter.com/feathertrail" style="color:#d8ff6b;">Twitter</a> page as I tinker away.</p>
+    <p style="display:block;width:475px;text-align:left;font-family:Georgia;font-size:24px;padding-left:18px;"><a href="https://synapsid-games.itch.io/feather-trail">PLAY THE DEMO NOW!</a></p>
+    <br>
+    <p style="display:block;width:475px;text-align:left;font-family:Georgia;font-size:24px;padding-left:18px;">For email updates, please add yourself to the <a href="https://forms.gle/FstYCWQzKDq8iWSs6" style="color:#d8ff6b;font-family:Georgia;font-size:18px;">Friends of Feather Trail Mailing List</a></p>
+    <p style="display:block;width:475px;text-align:left;font-family:Georgia;font-size:18px;padding-left:18px;">You can also follow along at the game's <a href="https://twitter.com/feathertrail" style="color:#d8ff6b;">Twitter</a> page as I tinker away.</p>
+    <p style="display:block;width:475px;text-align:left;font-family:Georgia;font-size:18px;padding-left:18px;">For a more personal take, I'm on <a href="https://bsky.app/profile/feathertrail.net" style="color:#d8ff6b;">Bluesky</a>.</p>
     <img src="./bago.gif" style="display:block;padding-top:30px;padding-left:100px;">
   </div>
 </body>
