--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p style="display:block;width:475px;text-align:left;font-family:Georgia;font-size:18px;padding-left:18px;">Feather Trail is an action RPG about going around and looking at birds, featuring real-world plants and animals. The game is currently in development.</p>
     <a style="color:#d8ff6b;display:block;width:475px;text-align:center;font-family:Georgia;font-size:24px;" href="https://synapsid-games.itch.io/feather-trail">PLAY THE DEMO NOW!</a>
     <br>
-    <p style="display:block;width:475px;text-align:left;font-family:Georgia;font-size:18px;padding-left:18px;">Please join us on <a href="https://discord.gg/DCGBc2Nd" style="color:#d8ff6b;font-family:Georgia;font-size:18px;">Discord</a>.</p>
+    <p style="display:block;width:475px;text-align:left;font-family:Georgia;font-size:18px;padding-left:18px;">Please join us on <a href="https://discord.gg/XKt776sR2P" style="color:#d8ff6b;font-family:Georgia;font-size:18px;">Discord</a>.</p>
     <p style="display:block;width:475px;text-align:left;font-family:Georgia;font-size:18px;padding-left:18px;">You can also follow along at the game's <a href="https://twitter.com/feathertrail" style="color:#d8ff6b;">Twitter</a>.</p>
     <p style="display:block;width:475px;text-align:left;font-family:Georgia;font-size:18px;padding-left:18px;">For a more personal take, I'm on <a href="https://bsky.app/profile/feathertrail.net" style="color:#d8ff6b;">Bluesky</a>.</p>
     <img src="./bago.gif" style="display:block;padding-top:30px;padding-left:100px;">
